--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
            
             <ul>
                 <div class="logo">
-                    <li><a href="index.html"><img id="logo" src="/self_branding/logo.png" width="50px"></a></li>
+                    <li><a href="index.html"><img id="logo" src="self_branding/logo.png" width="50px"></a></li>
                 </div>
                 <div class="nav">
-                    <li><a href="/about-page.html">About</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
+                    <li><a href="about-page.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="/resume.html">Resume</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                  </div>
             </ul>
         </nav>
@@ -31,7 +31,7 @@
         <h1>Hi, I'm Bethany!</h1>
         <p>Visual Communication <mark>Designer</mark> & Future Software <mark>Developer</mark></p>
         <br><br>
-        <a class="button2" href="mailto:bsimmonsemms@gmail.com"> <img src="/icons/mail.png" width="35px">&nbsp; Get in Touch!</a>
+        <a class="button2" href="mailto:bsimmonsemms@gmail.com"> <img src="icons/mail.png" width="35px">&nbsp; Get in Touch!</a>
     </section>
 
 
@@ -39,7 +39,7 @@
         <h2>About Me</h2>
         <p>I have a degree in Visual Communication Design and am currently in my third year of a Computer Science degree. I specialize in web design and front-end development, with experience in HTML, CSS, JavaScript, Python, C# and more.</p>
         <br>
-        <a class="read-more" href="/about-page.html">Read More &rarr;</a>
+        <a class="read-more" href="about-page.html">Read More &rarr;</a>
     </section>
 
     <section id="projects" class="projects">
@@ -75,9 +75,9 @@
         <h2>Contact Me</h2>
         <p>If you'd like to get in touch, feel free to reach out via email, LinkedIn or leave a message!</p>
         <br><br>
-        <a class="button3" href="mailto:bsimmonsemms@gmail.com"> <img src="/icons/mail.png" width="22px"></a> &nbsp;&nbsp;<span class="subheading">bsimmonsemms@gmail.com</span>
+        <a class="button3" href="mailto:bsimmonsemms@gmail.com"> <img src="icons/mail.png" width="22px"></a> &nbsp;&nbsp;<span class="subheading">bsimmonsemms@gmail.com</span>
         <br><br><br>
-        <a class="button3" href="https://www.linkedin.com/in/bethany-simmons-emms/"> <img src="/icons/linkedin.png" width="22px"></a>&nbsp;&nbsp;&nbsp;<span class="subheading">linkedin.com/in/bethany-simmons-emms/</span>
+        <a class="button3" href="https://www.linkedin.com/in/bethany-simmons-emms/"> <img src="icons/linkedin.png" width="22px"></a>&nbsp;&nbsp;&nbsp;<span class="subheading">linkedin.com/in/bethany-simmons-emms/</span>
     </div>
 
     
