Fix Get in touch

--- a/index.html
+++ b/index.html
@@ -26,12 +26,21 @@
             </ul>
         </nav>
     </header>
-
     <section class="hero">
         <h1>Hi, I'm Bethany!</h1>
         <p>Visual Communication <mark>Designer</mark> & Future Software <mark>Developer</mark></p>
         <br><br>
-        <a class="button2" href="mailto:bsimmonsemms@gmail.com"> <img src="icons/mail.png" width="35px">&nbsp; Get in Touch!</a>
+        <a class="button2" href="mailto:bsimmonsemms@gmail.com" style="
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        width: fit-content;
+        padding: 21px 27px;
+        align-items: center;"> 
+            <img src="icons/mail.png" width="35px" style="
+        width: min-content;
+        height: 26px;
+    ">&nbsp; Get in Touch!</a>
     </section>
 
 
